added service file, added tests and tweaked gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,7 @@ dmypy.json
 # local sqllite
 *.db
 
-# others
-firstcloudtemplate.yml
-iamrolepolicycloud.json
-trust.json
+# others not sure if to ignore for project
+# firstcloudtemplate.yml
+# iamrolepolicycloud.json
+# trust.json
